# Data-Aware-RAG-bot-

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
src/pdf_chatbot/: answer.py  api.py  chunker.py  cli.py  config.py  loader.py  models.py  store.py
src/pdf_chatbot_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_answer.py  test_chunker.py  test_store.py
