[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-chatbot-ai"
version = "0.1.0"
description = "A PDF chat app with retrieval, source grounding, and cloud-deployable Gemini answers."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "openai>=1.60.0",
  "pypdf>=4.2.0",
  "streamlit>=1.36.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-dotenv>=1.0.1",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "python-multipart>=0.0.9",
  "requests>=2.32.0",
  "google-genai>=1.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]

[project.scripts]
pdf-chatbot = "pdf_chatbot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
